# ros-mcp-server

./: .gitignore  Dockerfile  MCPFUNCTIONS.md  Makefile  README.md  README_zh.md  USAGE_EXAMPLES.md  claude_desktop_config.json  debug_messages.py  debug_position.py  deploy-docker.sh  docker-compose.yml  env.example  pyproject.toml  server.py  start_stdio.py  stdio_proxy.py  stdio_wrapper.py  test_mcp_fix.py  test_move_base_simple.py  test_position.py  test_real_waypoints.py  test_stdio_client.py  test_stdio_proxy.py
msgs/geometry_msgs/: __init__.py  pose_array.py  pose_stamped.py  pose_with_covariance_stamped.py
msgs/nav2_msgs/: __init__.py  follow_waypoints_action.py  navigate_to_pose_action.py
msgs/nav_msgs/: __init__.py  odometry.py
nginx/: nginx.conf
scripts/: install.bat  install.sh
tests/: debug_nav.py  quick_test.py  test-docker.py  test_goal_pose.py  test_mcp_position.py  test_parsing.py  test_server.py
utils/: service_caller.py  waypoint_sender.py  websocket_manager.py
